# upDown3

./: 4links.cpp  CMC.osim  CMC_Actuators.xml  CMC_Tasks.xml  CMC_Test.xml  CMakeLists.txt  MocoJumpGoal.cpp  MocoJumpGoal.h  README.md  RegisterTypes_osimMocoJumpGoal.cpp  RegisterTypes_osimMocoJumpGoal.h  additions.h  analyze.xml  analyze2.xml  computeJumpH.sh  console.h  jadditions.h  myForward.cpp  myPrescribedController.cpp  mygColo.cpp  osimMocoJumpGoalDLL.h  transpose.py  transpose.sh
results/: base.osim  base3springs.osim  fwd_1Table.csv  fwd_2Table.csv  fwd_3Table.csv  fwd_4Table.csv  fwd_5Table.csv  fwd_6Table.csv  fwd_AllTable.csv  fwd_debug.csv  fwd_integ.osim  fwd_states.sto  mycolo.omoco  mycolo_controls.sto  mycolo_debug.csv  mycolo_initial.osim  mycolo_states.sto  mycolo_traj.sto  traj0.0.0.sto  traj0.0.10.sto  traj0.0.12.sto  traj0.0.13.sto  traj0.0.14.sto  traj0.0.15.sto  traj0.0.16.sto  traj0.0.2.sto  traj0.0.4.sto  traj0.0.6.sto  traj0.0.8.sto  traj0.10.0.sto  traj0.12.0.sto  traj0.14.0.sto  traj0.16.0.sto  traj0.18.0.sto  traj0.2.0.sto  traj0.4.0.sto  traj0.6.0.sto  traj0.8.0.sto  traj10.0.0.sto  traj14.0.0.sto  (+11 more)
results/0/: fwd_1Table.csv  fwd_2Table.csv  fwd_3Table.csv  fwd_4Table.csv  fwd_5Table.csv  fwd_6Table.csv  fwd_AllTable.csv  fwd_debug.csv  fwd_integ.osim  fwd_states.sto  mycolo.omoco  mycolo_controls.sto  mycolo_debug.csv  mycolo_states.sto  mycolo_traj.sto
results/1/: fwd_1Table.csv  fwd_2Table.csv  fwd_3Table.csv  fwd_4Table.csv  fwd_5Table.csv  fwd_6Table.csv  fwd_AllTable.csv  fwd_debug.csv  fwd_integ.osim  fwd_states.sto  mycolo.omoco  mycolo_controls.sto  mycolo_debug.csv  mycolo_initial.osim  mycolo_states.sto  mycolo_traj.sto
results/123/: fwd_1Table.csv  fwd_2Table.csv  fwd_5Table.csv  fwd_debug.csv  fwd_integ.osim  mycolo_states.sto
results/2/: fwd_1Table.csv  fwd_2Table.csv  fwd_3Table.csv  fwd_4Table.csv  fwd_5Table.csv  fwd_6Table.csv  fwd_AllTable.csv  fwd_debug.csv  fwd_integ.osim  fwd_states.sto  mycolo.omoco  mycolo_controls.sto  mycolo_debug.csv  mycolo_states.sto  mycolo_traj.sto
results/3/: fwd_1Table.csv  fwd_2Table.csv  fwd_3Table.csv  fwd_4Table.csv  fwd_5Table.csv  fwd_6Table.csv  fwd_AllTable.csv  fwd_debug.csv  fwd_integ.osim  fwd_states.sto  mycolo.omoco  mycolo_controls.sto  mycolo_debug.csv  mycolo_states.sto  mycolo_traj.sto
src/: base3springs.osim  colotraj.sto  colotraj0.sto  colotraj4.sto  delp1.txt  delp2.txt  delp3.txt  delp4.txt  delp5.txt  delp6.txt  delp_initial.osim  inpdata.txt  nolimit_link_act.osim
